<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_gravity="end"
        android:layout_margin="12dp"
        app:cardCornerRadius="14dp">
        <LinearLayout
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:contentDescription="@string/cd_close_button"
                app:srcCompat="@drawable/ic_close" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewWhatsappBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/helpline_details"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/whatsappButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="@color/green4"
        app:cardCornerRadius="24dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_whatsapp_white"
                android:layout_marginEnd="8dp"
                android:contentDescription="@null" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helpline"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>